# Stat386_FinalProject

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  state_names.json  summarized_fbi_data.parquet
docs/: _quarto.yml  documentation.html  documentation.qmd  index.html  index.qmd  search.json  tutorial.html  tutorial.qmd  writeup.html  writeup.qmd
docs/.quarto/project-cache/: deno-kv-file
docs/_site/: documentation.html  search.json
src/data/: Combined_DF.csv  Marriage_Divorce_rates.csv
src/json/: crime_abbr.json  states.json
src/stat386_finalproject_divorce_crime/: CleanAndCombineDataset.ipynb  __init__.py  analysis.py  app.py  clean_data.py  main.py  requirements.txt  streamlit_test.py  wrangling.py
src/stat386_finalproject_divorce_crime/notebooks/: GetUSCensusBurea.ipynb  eda.ipynb
tests/: test_main.py
