[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Stat386-FinalProject-Divorce-Crime"
version = "0.1.4"
description = "Divorce and FBI Crime Data Analysis with Streamlit"
authors = [
  { name = "Brendan Behunin" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.26.0",
    "pandas",
    "matplotlib",
    "streamlit",
    "python-dotenv"
]

[project.scripts]
crime-app = "stat386_finalproject_divorce_crime.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/behunin3/Stat386-FinalProject"
Repository = "https://github.com/behunin3/Stat386_FinalProject.git"
Issues = "https://github.com/behunin3/Stat386-FinalProject/issues"